--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,75 @@
-.Rproj.user
-.Rhistory
+## Copy from Peter Solymos's approach
+https://github.com/borealbirds/lhreg/blob/master/.gitignore
+
+# Windows image file caches
+Thumbs.db
+ehthumbs.db
+
+# Folder config file
+Desktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Windows Installer files
+*.cab
+*.msi
+*.msm
+*.msp
+
+# Windows shortcuts
+*.lnk
+
+# =========================
+# Operating System Files
+# =========================
+
+# OSX
+# =========================
+
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Thumbnails
+._*
+
+# Files that might appear on external disk
+.Spotlight-V100
+.Trashes
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+## R related files
+*.Rdata
 .RData
+*.Rhistory
+.Rhistory
+.Rproj.user*
+.Rproj.user
 .Ruserdata
+.Rapp.history
+*.doc*
+*.pdf
+
+## Data Folders
+*.xlsx
+.xls
+*.csv
+.csv
+*.txt
+.txt
+
+
+## Folders with Data
 data
 output
 /data
 /output
+data/
+output/
