--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-## Copy from Peter Solymos's approach
+## Modify from Peter Solymos's approach
 https://github.com/borealbirds/lhreg/blob/master/.gitignore
 
 # Windows image file caches
